--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,4 @@
 # https://www.playframework.com/documentation/latest/Configuration
 
-play.filters.enabled=[]
+#play.filters.enabled=[]
+play.filters.enabled += "play.filters.cors.CORSFilter"
